# gnome-keysign

./: meson.build
data/: gks-main.ui  gks-row.ui  gnome-keysign.desktop  gnome-keysign.gresource.xml  meson.build
src/: gks-cleanup.h  gks-gpg.c  gks-gpg.h  gks-key.c  gks-key.h  gks-main.c  gks-row.c  gks-row.h  meson.build
